--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,7 +6,7 @@
   <title>Register - MPL-Hacktiv8</title>
 </head>
 <body>
-  <h1>Register</h1>
+  <h1>Buat Akun</h1>
 
   <form method="post">
     <label for="username">Username</label> <br>
@@ -18,7 +18,9 @@
     <label for="password">Password</label> <br>
     <input type="text" name="password"> <br><br>
 
-    <button type="submit">Register</button>
+    <button type="submit">Buat Akun</button>
   </form>
+
+  <p>Sudah punya akun? <a href="/login">Masuk</a></p>
 </body>
 </html>
