--- a/views/teams.ejs
+++ b/views/teams.ejs
@@ -6,6 +6,8 @@
   <title>Daftar Tim - MPL-Hacktiv8</title>
 </head>
 <body>
+  <a href="/logout">Keluar</a>
+  
   <h1>Teams</h1>
 
   <table border="1">
