--- a/views/register.ejs
+++ b/views/register.ejs
@@ -16,7 +16,7 @@
     <input type="text" name="email"> <br><br>
 
     <label for="password">Password</label> <br>
-    <input type="text" name="password"> <br><br>
+    <input type="password" name="password"> <br><br>
 
     <button type="submit">Buat Akun</button>
   </form>
