--- a/views/matches.ejs
+++ b/views/matches.ejs
@@ -20,9 +20,9 @@
     <% matches.forEach(match => { %>
      <tr>
       <td><%= match.date %></td>
-      <td><%= match.Team1Id.abbreviation %> <img width="50px" src="<%= match.Team1Id.imgUrl %>"></td>
-      <td><img width="50px" src="<%= match.Team2Id.imgUrl %>"> <%= match.Team2Id.abbreviation %></td>
-      <td><a href="/matches/<%= match.id %>/games/add"><button>Add Games</button></a></td>
+      <td><%= match.Team1.abbreviation %> <img width="50px" src="<%= match.Team1.imgUrl %>"></td>
+      <td><img width="50px" src="<%= match.Team2.imgUrl %>"> <%= match.Team2.abbreviation %></td>
+      <td><a href="add/match/<%= match.id %>/games/"><button>Add Games</button></a></td>
      </tr>
     <% }) %>
     
