--- a/views/matchDetail.ejs
+++ b/views/matchDetail.ejs
@@ -21,7 +21,11 @@
        <tr>
         <td><%= index + 1 %></td>
         <td>
-          <img src="" alt="">
+          <img src="<%= game.MidlanerTeam1.imgUrl %>">
+          <img src="<%= game.GoldlanerTeam1.imgUrl %>">
+          <img src="<%= game.ExplanerTeam1.imgUrl %>">
+          <img src="<%= game.RoamerTeam1.imgUrl %>">
+          <img src="<%= game.JunglerTeam1.imgUrl %>">
         </td>
        </tr>
       <% }) %>
