--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styleSheets/styles.css">
+    <link rel="stylesheet" href="/styleSheets/CSS/HomeStyles.css">
 </head>
 <body>
-    <ul class="menu-bar">
-        <li>Watch Now</li>
-        <li>Watch Now</li>
-        <li>Movies</li>
-        <li>TV Shows</li>
-        <li>Sports</li>
-        <li>Movies</li>
-    </ul>
+    <div>
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Gallery</li>
+            <li>Contact us</li>
+        </ul> 
+        <a class="shameless-plug" href="https://scottyzen.com/?cp" target="_blank">👋 Visit My Website</a>
+    </div>
 </body>
 </html>
