--- a/views/heroes.ejs
+++ b/views/heroes.ejs
@@ -98,7 +98,7 @@
           <div class="products-area-wrapper tableView">
             <div class="products-header">
               <div class="product-cell image">Hero</div>
-              <div class="product-cell category">Match Played</div>
+              <div class="product-cell category">Games Played</div>
               <div class="product-cell sales">Win</div>
               <div class="product-cell stock">lose</div>
               <div class="product-cell price">WinRate</div>
@@ -113,7 +113,7 @@
                       <img src="<%= el.imgUrl %>" alt="product">
                       <span><%= el.name %></span>
                     </div>
-                  <div class="product-cell category"><span class="cell-label">Match Played :</span>20</div>
+                  <div class="product-cell category"><span class="cell-label">Games Played :</span>20</div>
                   <div class="product-cell sales"><span class="cell-label">Win :</span>11</div>
                   <div class="product-cell stock"><span class="cell-label">Lose :</span>36</div>
                   <div class="product-cell price"><span class="cell-label">Win Rates :</span>%</div>
