--- a/views/matchDetail.ejs
+++ b/views/matchDetail.ejs
@@ -7,6 +7,7 @@
 </head>
 <body>
   <a href="/matches"><button>Kembali ke Hasil Pertandingan</button></a> <br><br><br>
+
   <table style="text-align:center">
     <tbody>
       <% gamesWithDrafts.forEach((game, index) => { %>
@@ -77,8 +78,8 @@
        </tr>
       <% }) %>
     </tbody>
-  </table>
+  </table> <br><br>
 
-
+  <a href="/add/match/<%= matchId %>/games/"><button>Tambahkan Pertandingan</button></a><br><br>
 </body>
 </html>
