--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,7 +24,7 @@
       <div class="center">
         <h2 class="form-title" id="login">Masuk</h2>
         <div class="form-holder">
-          <input type="email" class="input" name="email" placeholder="Email" />
+          <input type="text" class="input" name="username" placeholder="Username" />
           <input type="password" class="input" name="password" placeholder="Password" />
         </div>
           <button class="submit-btn">Masuk</button>
