--- a/views/matches.ejs
+++ b/views/matches.ejs
@@ -6,6 +6,12 @@
   <title>Pertandingan</title>
 </head>
 <body>
+
+  <a href="/matches" style="margin-right: 20px;">Daftar Pertandingan</a>
+  <a href="/heroes" style="margin-right: 20px;">Daftar Hero </a>
+  <a href="/players" style="margin-right: 20px;">Daftar Pemain</a>
+  <a href="/logout">Keluar</a>
+
   <h1>Pertandingan</h1>
 
   <a href="/add/match"><button>Tambahkan Pertandingan</button></a> <br><br>
@@ -24,13 +30,14 @@
 
     <% matches.forEach(match => { %>
      <tr>
-      <td><%= match.date %></td>
+      <td><%= match.formattedDate %></td>
       <td><%= match.Team1.abbreviation %> <img width="50px" src="<%= match.Team1.imgUrl %>"></td>
       <td><%= match.team1Score %></td>
       <td><%= match.team2Score %></td>
       <td><img width="50px" src="<%= match.Team2.imgUrl %>"> <%= match.Team2.abbreviation %></td>
       <td>
         <a href="/matches/<%= match.id %>"><button>See Details</button></a><br>
+        <a href="/edit/match/<%= match.id %>"><button>Edit Match Date</button></a>
       </td>
      </tr>
     <% }) %>
